Page shift error fixed

--- a/styles/quote.css
+++ b/styles/quote.css
@@ -103,15 +103,15 @@ form span label {
 /*Samsung Galaxy and others*/
 @media only screen and (max-width: 466px) {
   form span input {
-    width: 420px;
+    width: 360px;
   }
   form span select {
-    width: 420px;
+    width: 360px;
   }
   form span textarea {
-    width: 420px;
+    width: 360px;
   }
   .quote__form__container .button {
-    width: 95%;
+    width: 88%;
   }
 }
